--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ Werkzeug==0.16.0
 flask==1.1.2
 flask_restplus==0.13.0
 nltk==3.2.5
-
+lxml
+pytest
 git+git://github.com/arne-cl/svgling-python2.7@master#egg=svgling
