--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-pexpect==4.7.0
-requests==2.22.0
-pathlib2==2.3.5
-Werkzeug==0.16.0
-flask==1.1.2
-flask_restplus==0.13.0
-nltk==3.2.5
+pexpect
+requests
+pathlib2
+Werkzeug
+flask
+flask_restplus
+nltk
 lxml
+svgling
 pytest
-git+git://github.com/arne-cl/svgling-python2.7@master#egg=svgling
+
